service.yaml
apiVersion: v1
kind: Service
metadata:
  name: total-site
  namespace: dev
spec:
  selector:
    app: total-site
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
