ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: total-site
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: dev.total-space.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: total-site
                port:
                  number: 80
